objects/EUR_CRM_OrderDeal__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_AnimationID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal</label>
        <referenceTo>EUR_CRM_Deal__c</referenceTo>
        <relationshipName>Order_Deal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_LastAnimatCriticalModifyingDate__c</fullName>
        <label>LastAnimationCriticalModifyingDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_OrderID__c</fullName>
        <label>Sales Order</label>
        <referenceTo>EUR_CRM_Sales_Order__c</referenceTo>
        <relationshipName>Order_Deal</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Order Deal (EU)</label>
    <nameField>
        <displayFormat>OD-{000000000}</displayFormat>
        <label>Order Deal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Deal (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_Deal</fullName>
        <active>true</active>
        <label>Deal</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_Order</fullName>
        <active>true</active>
        <label>Order</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>